--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -18,8 +18,8 @@ after-startup-command = []
 start-at-login = true
 
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
-enable-normalization-flatten-containers = true
-enable-normalization-opposite-orientation-for-nested-containers = true
+enable-normalization-flatten-containers = false
+enable-normalization-opposite-orientation-for-nested-containers = false
 
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
 # The 'accordion-padding' specifies the size of accordion padding
@@ -86,7 +86,7 @@ outer.right = 10
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 ctrl-alt-shift-slash = 'layout tiles horizontal vertical'
 ctrl-alt-shift-comma = 'layout accordion horizontal vertical'
-
+ctrl-alt-shift-f = 'flatten-workspace-tree'
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
 # ctrl-shift-alt-h = 'focus left'
 # ctrl-shift-alt-j = 'focus down'
@@ -109,8 +109,8 @@ alt-shift-down = 'move down'
 alt-shift-up = 'move up'
 alt-shift-right = 'move right'
 
-ctrl-alt-shift-f = 'fullscreen'
-ctrl-alt-shift-m = 'fullscreen'
+#ctrl-alt-shift-f = 'fullscreen'
+#ctrl-alt-shift-m = 'fullscreen'
 ctrl-alt-shift-enter = "fullscreen"
 
 # ctrl-alt-shift-cmd-h = 'join-with left'
@@ -146,6 +146,7 @@ ctrl-alt-shift-e = 'workspace E'
 # ctrl-alt-shift-f = 'workspace F'
 ctrl-alt-shift-g = 'workspace G'
 ctrl-alt-shift-i = 'workspace I'
+ctrl-alt-shift-k = 'workspace K'
 # ctrl-alt-shift-m = 'workspace M'
 ctrl-alt-shift-n = 'workspace N'
 ctrl-alt-shift-o = 'workspace O'
@@ -197,8 +198,9 @@ ctrl-alt-shift-cmd-z = 'move-node-to-workspace Z'
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
-alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
-
+#alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
+ctrl-alt-shift-tab = 'move-node-to-monitor --wrap-around next --focus-follows-window'
+shift-tab = 'focus-monitor --wrap-around next'
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
 
