--- a/alacritty/nord.toml
+++ b/alacritty/nord.toml
@@ -1,16 +1,16 @@
 [colors]
 [colors.primary]
-#background = "#2e3440"
-background = "#2e3440"
+
+background = "#212632"
 foreground = "#d8dee9"
 dim_foreground = "#a5abb6"
 
 [colors.cursor]
-text = "#2e3440"
+text = "#212632"
 cursor = "#d8dee9"
 
 [colors.vi_mode_cursor]
-text = "#2e3440"
+text = "#212632"
 cursor = "#d8dee9"
 
 [colors.selection]
@@ -51,3 +51,964 @@ blue = "#68809a"
 magenta = "#8c738c"
 cyan = "#6d96a5"
 white = "#aeb3bb"
+
+#
+# [[colors.indexed_colors]]
+# index = 16
+# color = "#10131c"
+#
+# [[colors.indexed_colors]]
+# index = 17
+# color = "#10131c"
+#
+# [[colors.indexed_colors]]
+# index = 18
+# color = "#151925"
+#
+# [[colors.indexed_colors]]
+# index = 19
+# color = "#2e3647"
+#
+# [[colors.indexed_colors]]
+# index = 20
+# color = "#344e6d"
+#
+# [[colors.indexed_colors]]
+# index = 21
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 22
+# color = "#24262c"
+#
+# [[colors.indexed_colors]]
+# index = 23
+# color = "#272c36"
+#
+# [[colors.indexed_colors]]
+# index = 24
+# color = "#2e3647"
+#
+# [[colors.indexed_colors]]
+# index = 25
+# color = "#344e6d"
+#
+# [[colors.indexed_colors]]
+# index = 26
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 27
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 28
+# color = "#556b42"
+#
+# [[colors.indexed_colors]]
+# index = 29
+# color = "#556b42"
+#
+# [[colors.indexed_colors]]
+# index = 30
+# color = "#4b627a"
+#
+# [[colors.indexed_colors]]
+# index = 31
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 32
+# color = "#516f95"
+#
+# [[colors.indexed_colors]]
+# index = 33
+# color = "#5e81ac"
+#
+# [[colors.indexed_colors]]
+# index = 34
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 35
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 36
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 37
+# color = "#59909f"
+#
+# [[colors.indexed_colors]]
+# index = 38
+# color = "#59909f"
+#
+# [[colors.indexed_colors]]
+# index = 39
+# color = "#81a1c1"
+#
+# [[colors.indexed_colors]]
+# index = 40
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 41
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 42
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 43
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 44
+# color = "#88c0d0"
+#
+# [[colors.indexed_colors]]
+# index = 45
+# color = "#88c0d0"
+#
+# [[colors.indexed_colors]]
+# index = 46
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 47
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 48
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 49
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 50
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 51
+# color = "#d8dee9"
+#
+# [[colors.indexed_colors]]
+# index = 52
+# color = "#10131c"
+#
+# [[colors.indexed_colors]]
+# index = 53
+# color = "#151925"
+#
+# [[colors.indexed_colors]]
+# index = 54
+# color = "#282e3e"
+#
+# [[colors.indexed_colors]]
+# index = 55
+# color = "#344e6d"
+#
+# [[colors.indexed_colors]]
+# index = 56
+# color = "#344e6d"
+#
+# [[colors.indexed_colors]]
+# index = 57
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 58
+# color = "#31343a"
+#
+# [[colors.indexed_colors]]
+# index = 59
+# color = "#31343a"
+#
+# [[colors.indexed_colors]]
+# index = 60
+# color = "#343e50"
+#
+# [[colors.indexed_colors]]
+# index = 61
+# color = "#344e6d"
+#
+# [[colors.indexed_colors]]
+# index = 62
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 63
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 64
+# color = "#556b42"
+#
+# [[colors.indexed_colors]]
+# index = 65
+# color = "#556b42"
+#
+# [[colors.indexed_colors]]
+# index = 66
+# color = "#4b627a"
+#
+# [[colors.indexed_colors]]
+# index = 67
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 68
+# color = "#516f95"
+#
+# [[colors.indexed_colors]]
+# index = 69
+# color = "#5e81ac"
+#
+# [[colors.indexed_colors]]
+# index = 70
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 71
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 72
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 73
+# color = "#59909f"
+#
+# [[colors.indexed_colors]]
+# index = 74
+# color = "#59909f"
+#
+# [[colors.indexed_colors]]
+# index = 75
+# color = "#81a1c1"
+#
+# [[colors.indexed_colors]]
+# index = 76
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 77
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 78
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 79
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 80
+# color = "#88c0d0"
+#
+# [[colors.indexed_colors]]
+# index = 81
+# color = "#88c0d0"
+#
+# [[colors.indexed_colors]]
+# index = 82
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 83
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 84
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 85
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 86
+# color = "#dddfe4"
+#
+# [[colors.indexed_colors]]
+# index = 87
+# color = "#d8dee9"
+#
+# [[colors.indexed_colors]]
+# index = 88
+# color = "#7a353d"
+#
+# [[colors.indexed_colors]]
+# index = 89
+# color = "#7a353d"
+#
+# [[colors.indexed_colors]]
+# index = 90
+# color = "#7a353d"
+#
+# [[colors.indexed_colors]]
+# index = 91
+# color = "#344e6d"
+#
+# [[colors.indexed_colors]]
+# index = 92
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 93
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 94
+# color = "#7a353d"
+#
+# [[colors.indexed_colors]]
+# index = 95
+# color = "#7a353d"
+#
+# [[colors.indexed_colors]]
+# index = 96
+# color = "#7a353d"
+#
+# [[colors.indexed_colors]]
+# index = 97
+# color = "#70546b"
+#
+# [[colors.indexed_colors]]
+# index = 98
+# color = "#3d5e87"
+#
+# [[colors.indexed_colors]]
+# index = 99
+# color = "#516f95"
+#
+# [[colors.indexed_colors]]
+# index = 100
+# color = "#556b42"
+#
+# [[colors.indexed_colors]]
+# index = 101
+# color = "#556b42"
+#
+# [[colors.indexed_colors]]
+# index = 102
+# color = "#596680"
+#
+# [[colors.indexed_colors]]
+# index = 103
+# color = "#516f95"
+#
+# [[colors.indexed_colors]]
+# index = 104
+# color = "#5e81ac"
+#
+# [[colors.indexed_colors]]
+# index = 105
+# color = "#5e81ac"
+#
+# [[colors.indexed_colors]]
+# index = 106
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 107
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 108
+# color = "#6a8353"
+#
+# [[colors.indexed_colors]]
+# index = 109
+# color = "#59909f"
+#
+# [[colors.indexed_colors]]
+# index = 110
+# color = "#81a1c1"
+#
+# [[colors.indexed_colors]]
+# index = 111
+# color = "#81a1c1"
+#
+# [[colors.indexed_colors]]
+# index = 112
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 113
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 114
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 115
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 116
+# color = "#88c0d0"
+#
+# [[colors.indexed_colors]]
+# index = 117
+# color = "#88c0d0"
+#
+# [[colors.indexed_colors]]
+# index = 118
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 119
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 120
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 121
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 122
+# color = "#dddfe4"
+#
+# [[colors.indexed_colors]]
+# index = 123
+# color = "#d8dee9"
+#
+# [[colors.indexed_colors]]
+# index = 124
+# color = "#7a353d"
+#
+# [[colors.indexed_colors]]
+# index = 125
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 126
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 127
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 128
+# color = "#896583"
+#
+# [[colors.indexed_colors]]
+# index = 129
+# color = "#896583"
+#
+# [[colors.indexed_colors]]
+# index = 130
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 131
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 132
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 133
+# color = "#896583"
+#
+# [[colors.indexed_colors]]
+# index = 134
+# color = "#896583"
+#
+# [[colors.indexed_colors]]
+# index = 135
+# color = "#896583"
+#
+# [[colors.indexed_colors]]
+# index = 136
+# color = "#896f38"
+#
+# [[colors.indexed_colors]]
+# index = 137
+# color = "#896f38"
+#
+# [[colors.indexed_colors]]
+# index = 138
+# color = "#a35e48"
+#
+# [[colors.indexed_colors]]
+# index = 139
+# color = "#896583"
+#
+# [[colors.indexed_colors]]
+# index = 140
+# color = "#9c7b96"
+#
+# [[colors.indexed_colors]]
+# index = 141
+# color = "#5e81ac"
+#
+# [[colors.indexed_colors]]
+# index = 142
+# color = "#a68849"
+#
+# [[colors.indexed_colors]]
+# index = 143
+# color = "#a68849"
+#
+# [[colors.indexed_colors]]
+# index = 144
+# color = "#a68849"
+#
+# [[colors.indexed_colors]]
+# index = 145
+# color = "#9b9ea5"
+#
+# [[colors.indexed_colors]]
+# index = 146
+# color = "#81a1c1"
+#
+# [[colors.indexed_colors]]
+# index = 147
+# color = "#81a1c1"
+#
+# [[colors.indexed_colors]]
+# index = 148
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 149
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 150
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 151
+# color = "#a1bf88"
+#
+# [[colors.indexed_colors]]
+# index = 152
+# color = "#97bdc8"
+#
+# [[colors.indexed_colors]]
+# index = 153
+# color = "#88c0d0"
+#
+# [[colors.indexed_colors]]
+# index = 154
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 155
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 156
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 157
+# color = "#ebcb8b"
+#
+# [[colors.indexed_colors]]
+# index = 158
+# color = "#e6e9ed"
+#
+# [[colors.indexed_colors]]
+# index = 159
+# color = "#e5e9f1"
+#
+# [[colors.indexed_colors]]
+# index = 160
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 161
+# color = "#973d48"
+#
+# [[colors.indexed_colors]]
+# index = 162
+# color = "#a6535b"
+#
+# [[colors.indexed_colors]]
+# index = 163
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 164
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 165
+# color = "#9c7b96"
+#
+# [[colors.indexed_colors]]
+# index = 166
+# color = "#a35e48"
+#
+# [[colors.indexed_colors]]
+# index = 167
+# color = "#a6535b"
+#
+# [[colors.indexed_colors]]
+# index = 168
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 169
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 170
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 171
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 172
+# color = "#b57560"
+#
+# [[colors.indexed_colors]]
+# index = 173
+# color = "#b57560"
+#
+# [[colors.indexed_colors]]
+# index = 174
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 175
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 176
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 177
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 178
+# color = "#a68849"
+#
+# [[colors.indexed_colors]]
+# index = 179
+# color = "#a68849"
+#
+# [[colors.indexed_colors]]
+# index = 180
+# color = "#cb8975"
+#
+# [[colors.indexed_colors]]
+# index = 181
+# color = "#c28e7e"
+#
+# [[colors.indexed_colors]]
+# index = 182
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 183
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 184
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 185
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 186
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 187
+# color = "#e0cda8"
+#
+# [[colors.indexed_colors]]
+# index = 188
+# color = "#bcc1cb"
+#
+# [[colors.indexed_colors]]
+# index = 189
+# color = "#d6dae0"
+#
+# [[colors.indexed_colors]]
+# index = 190
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 191
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 192
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 193
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 194
+# color = "#edeff2"
+#
+# [[colors.indexed_colors]]
+# index = 195
+# color = "#eceff5"
+#
+# [[colors.indexed_colors]]
+# index = 196
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 197
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 198
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 199
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 200
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 201
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 202
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 203
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 204
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 205
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 206
+# color = "#bf616a"
+#
+# [[colors.indexed_colors]]
+# index = 207
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 208
+# color = "#d08770"
+#
+# [[colors.indexed_colors]]
+# index = 209
+# color = "#d08770"
+#
+# [[colors.indexed_colors]]
+# index = 210
+# color = "#d08770"
+#
+# [[colors.indexed_colors]]
+# index = 211
+# color = "#d08770"
+#
+# [[colors.indexed_colors]]
+# index = 212
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 213
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 214
+# color = "#dabe85"
+#
+# [[colors.indexed_colors]]
+# index = 215
+# color = "#dabe85"
+#
+# [[colors.indexed_colors]]
+# index = 216
+# color = "#dabe85"
+#
+# [[colors.indexed_colors]]
+# index = 217
+# color = "#d08770"
+#
+# [[colors.indexed_colors]]
+# index = 218
+# color = "#b48ead"
+#
+# [[colors.indexed_colors]]
+# index = 219
+# color = "#bcc1cb"
+#
+# [[colors.indexed_colors]]
+# index = 220
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 221
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 222
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 223
+# color = "#ebcb8b"
+#
+# [[colors.indexed_colors]]
+# index = 224
+# color = "#dbdee3"
+#
+# [[colors.indexed_colors]]
+# index = 225
+# color = "#d8dee9"
+#
+# [[colors.indexed_colors]]
+# index = 226
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 227
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 228
+# color = "#eeca83"
+#
+# [[colors.indexed_colors]]
+# index = 229
+# color = "#edeff2"
+#
+# [[colors.indexed_colors]]
+# index = 230
+# color = "#edeff2"
+#
+# [[colors.indexed_colors]]
+# index = 231
+# color = "#edeff2"
+#
+# [[colors.indexed_colors]]
+# index = 232
+# color = "#10131c"
+#
+# [[colors.indexed_colors]]
+# index = 233
+# color = "#10131c"
+#
+# [[colors.indexed_colors]]
+# index = 234
+# color = "#181c25"
+#
+# [[colors.indexed_colors]]
+# index = 235
+# color = "#24262c"
+#
+# [[colors.indexed_colors]]
+# index = 236
+# color = "#31343a"
+#
+# [[colors.indexed_colors]]
+# index = 237
+# color = "#31343a"
+#
+# [[colors.indexed_colors]]
+# index = 238
+# color = "#3f424a"
+#
+# [[colors.indexed_colors]]
+# index = 239
+# color = "#474c55"
+#
+# [[colors.indexed_colors]]
+# index = 240
+# color = "#515660"
+#
+# [[colors.indexed_colors]]
+# index = 241
+# color = "#596680"
+#
+# [[colors.indexed_colors]]
+# index = 242
+# color = "#537474"
+#
+# [[colors.indexed_colors]]
+# index = 243
+# color = "#6d7991"
+#
+# [[colors.indexed_colors]]
+# index = 244
+# color = "#7f8288"
+#
+# [[colors.indexed_colors]]
+# index = 245
+# color = "#858991"
+#
+# [[colors.indexed_colors]]
+# index = 246
+# color = "#9b9ea5"
+#
+# [[colors.indexed_colors]]
+# index = 247
+# color = "#9b9ea5"
+#
+# [[colors.indexed_colors]]
+# index = 248
+# color = "#a0a3a7"
+#
+# [[colors.indexed_colors]]
+# index = 249
+# color = "#a1b7b6"
+#
+# [[colors.indexed_colors]]
+# index = 250
+# color = "#bcc1cb"
+#
+# [[colors.indexed_colors]]
+# index = 251
+# color = "#bcc1cb"
+#
+# [[colors.indexed_colors]]
+# index = 252
+# color = "#d6dae0"
+#
+# [[colors.indexed_colors]]
+# index = 253
+# color = "#d6dae0"
+#
+# [[colors.indexed_colors]]
+# index = 254
+# color = "#e6e9ed"
+#
+# [[colors.indexed_colors]]
+# index = 255
+# color = "#edeff2"
