--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -200,7 +200,7 @@ alt-tab = 'workspace-back-and-forth'
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
 #alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 ctrl-alt-shift-tab = 'move-node-to-monitor --wrap-around next --focus-follows-window'
-shift-tab = 'focus-monitor --wrap-around next'
+ctrl-tab = 'focus-monitor --wrap-around next'
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
 
