--- a/ghostty/config
+++ b/ghostty/config
@@ -1,14 +1,86 @@
-theme=nord
 
+# ghostty +show-config --default --docs
+# ghostty +list-themes
+
+# Font
+freetype-load-flags            = no-hinting
+freetype-load-flags            = no-force-autohint
+
+font-family                    = Symbols Nerd Font Mono
+font-family                    = Iosevka Mgj Mono
+# window-title-font-family       = Iosevka Mgj Mono
+
+font-feature                   = calt
+font-feature                   = dlig
+
+font-thicken                   = false
+font-size                      = 13
+window-inherit-font-size       = true
+
+# Look and Feel 0
+# adjust-cursor-thickness        = 3
+adjust-cell-width              = -10% 
+adjust-underline-position      = 3
+bold-is-bright                 = true
+link-url                       = true
+macos-titlebar-proxy-icon      = hidden
+macos-titlebar-style           = hidden
+mouse-hide-while-typing        = true 
+theme                          = nord
+window-vsync                   = true
 background-opacity=1
-
+unfocused-split-opacity=0.7
 background=#212632
 selection-foreground=#D8DEE9
 selection-background=#7E8CA7
 unfocused-split-fill=#2E3440
-
-#font-family="IosevkaMgjTerm Nerd Font"
-#window-decoration = false
 window-padding-x = 8 
 window-padding-y = 8
-macos-titlebar-style = hidden
+
+
+# Other
+clipboard-paste-protection     = true
+clipboard-trim-trailing-spaces = true
+#copy-on-select                 = true
+macos-auto-secure-input        = true
+macos-secure-input-indication  = true
+quit-after-last-window-closed  = true
+#scrollback-limit               = 4200
+shell-integration              = zsh
+shell-integration-features     = no-cursor,sudo,title
+
+# keybind
+keybind = alt+up=text:\x1b[1;3A
+keybind = alt+down=text:\x1b[1;3B
+keybind = alt+right=text:\x1b[1;3C
+keybind = alt+left=text:\x1b[1;3D
+
+keybind = super+right=goto_split:right
+keybind = super+down=goto_split:bottom
+keybind = super+left=goto_split:left
+keybind = super+up=goto_split:top
+
+keybind = super+minus=new_split:down
+keybind = super+backslash=new_split:right
+
+keybind = super+shift+equal=increase_font_size:1
+keybind = super+shift+plus=increase_font_size:1
+keybind = super+shift+minus=decrease_font_size:1
+keybind = super+shift+zero=reset_font_size
+
+# keybind = super+shift+minu==---s=
+
+
+
+
+
+# keybind = super+shift-minus=text:_
+
+# keybind = unbind:cmd+right=
+
+
+# keybind = cmd+right=send:\x1b[1;9C
+
+
+######
+
