--- a/starship.toml
+++ b/starship.toml
@@ -1,7 +1,10 @@
 format = """
+$os\
 $username\
 $hostname\
+$git_metrics\
 $directory\
+${custom.jj}\
 $git_branch\
 $git_state\
 $git_status\
@@ -9,6 +12,7 @@ $cmd_duration\
 $line_break\
 $python\
 $character"""
+
 
 [directory]
 style = "blue"
@@ -20,18 +24,22 @@ vimcmd_symbol = "[❮](green)"
 
 [git_branch]
 format = "[$branch]($style)"
-style = "bright-black"
+style = "#A3BE8C"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+
+format = "[($conflicted$untracked[$staged](#A3BE8C)[$modified$renamed](#EBCB8B)[$deleted](#BF616A)$stashed$diverged)]($style) [($ahead_behind)]() "
 style = "cyan"
-conflicted = "​"
-untracked = "​"
-modified = "​"
-staged = "​"
-renamed = "​"
-deleted = "​"
-stashed = "≡"
+conflicted = " ${count}"
+ahead = " ▲${count}"
+behind = " ▼${count}"
+untracked = " ?${count}"
+modified = " !${count}"
+staged = " +${count}"
+renamed = " »${count}"
+deleted = " x${count}"
+stashed = " *${count}"
+diverged = '⇕▲${ahead_count}▼${behind_count}'
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
@@ -41,6 +49,60 @@ style = "bright-black"
 format = "[$duration]($style) "
 style = "yellow"
 
-[python]
-format = "[$virtualenv]($style) "
-style = "bright-black"
+[os]
+format = "[$symbol]($style) "
+style = "bold blue"
+disabled = false
+
+[os.symbols]
+Alpaquita = " "
+Alpine = " "
+AlmaLinux = " "
+Amazon = " "
+Android = " "
+Arch = " "
+Artix = " "
+CachyOS = " "
+CentOS = " "
+Debian = " "
+DragonFly = " "
+Emscripten = " "
+EndeavourOS = " "
+Fedora = " "
+FreeBSD = " "
+Garuda = "󰛓 "
+Gentoo = " "
+HardenedBSD = "󰞌 "
+Illumos = "󰈸 "
+Kali = " "
+Linux = " "
+Mabox = " "
+Macos = " "
+Manjaro = " "
+Mariner = " "
+MidnightBSD = " "
+Mint = " "
+NetBSD = " "
+NixOS = " "
+Nobara = " "
+OpenBSD = "󰈺 "
+openSUSE = " "
+OracleLinux = "󰌷 "
+Pop = " "
+Raspbian = " "
+Redhat = " "
+RedHatEnterprise = " "
+RockyLinux = " "
+Redox = "󰀘 "
+Solus = "󰠳 "
+SUSE = " "
+Ubuntu = " "
+Unknown = " "
+Void = " "
+Windows = "󰍲 "
+
+[custom.jj]
+command = '''starship-jj --ignore-working-copy starship prompt | sed -e "s;▲; ▲;" -e "s;▼; ▼;" '''
+format = "[$symbol](blue bold) $output "
+symbol = "\ue702"
+when = "jj root --ignore-working-copy"
